--- a/mod.conf
+++ b/mod.conf
@@ -1,6 +1,6 @@
 name = porcelain
 description = porcelain crafting with a color scheme to complement bakedclay mod by adding 32 additional shades.
-depends = default, farming
+depends = default, farming, vessels
 optional_depends = stairs, moreblocks, bakedclay
 min_minetest_version = 5.0
 release = 0
